app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css.
 *
 * With Propshaft, assets are served efficiently without preprocessing steps. You can still include
 * application-wide styles in this file, but keep in mind that CSS precedence will follow the standard
 * cascading order, meaning styles declared later in the document or manifest will override earlier ones,
 * depending on specificity.
 *
 * Consider organizing styles into separate files for maintainability.
 */
body {
    background-color: #CECDFF;
    font-family: 'Times New Roman', Times, serif;
    margin: 0;
}

#notice {
    z-index: 7000;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    background-color: #4ee055;
    padding: 12px;
    outline: 2px black solid;
    top: 30px;
}

#notice>button {
    border-radius: 0;
    border: 1px solid black;
    background-color: #119517;
    color: white;
    transform: translateY(-1px);
}

#notice>button:hover {
    background-color: #2faf35;
}

.error {
    background-color: red !important;
}

.error>button:hover {
    background-color: #af2f2f !important;
}

.error>button {
    background-color: #951111 !important;
}

#notice>p {
    text-align: center;
    width: fit-content;
    color: white;
    margin: 0;
    display: inline;
}

.back {
    position: absolute;
}

.leaderboard-entry {
    border: 1px solid;
    margin-bottom: 5px;
    padding: 4px;
}

.leaderboard-entry>span {
    margin: 0;
    padding: 0;
    font-size: 20px;
}

.form-container {
    background-color: #dce9d9;
    padding: 20px;
}

#image-showcase {
    width: 722px;
    height: 84px;
    background-color: #f2ffef;
    display: inline-block;
    text-align: center;
}

#image-showcase::before {
    font: inherit;
    display: block !important;
    margin-top: 30px;
    font-style: italic;
}

.tooltip {
    text-decoration: underline;
}

.tooltip>div {
    display: none;
    background-color: #f2ffef;
    position: absolute;
    width: 220px;
    padding: 7px;
    outline: 2px solid black;
}

.tooltip:hover>div {
    display: inline-block;
}

.tooltip:hover>div:hover {
    display: none;
    /* so that hovering the tooltip window doesnt keep it open,
    because then it can get hard to access the input field that is being directly covered by this tooltip. */
}

.label {
    font-size: 18px;
    line-height: 26px;
}

.smol {
    font-size: 19px !important;
    padding: 9px !important;
    padding-top: 4px !important;
    padding-bottom: 4px !important;
}

input[type=url],
input[type=text] {
    font-family: Arial, Helvetica, sans-serif;
    font-size: inherit;
    height: 25px;
}

input[type=url]:focus,
input[type=text]:focus {
    outline: none;
}

input[type="file"]::file-selector-button {
    border-radius: 0;
    border: 2px solid black;
}

input[type="file"]::-webkit-file-name-text {
    border-radius: 0;
    border: 2px solid black;
}

input[type=file] {
    border: none;
}

input {
    border-radius: 0;
    border: 2px solid black;
}


.navbar {
    background-color: white;
    border-bottom: 1px solid black;
    height: 48px;
}

.navbar>a {
    font-size: 22px;
    margin-left: 6px;
    margin-right: 10px;
}

.navbar>div {
    display: inline;
}

.navbar>div>.linkbutton {
    margin-right: 6px;
    margin-top: 2px;
    padding: 8px;
    padding-right: 8px;
    padding-right: 15px;
    float: right;
    background-color: black;
    box-shadow: none;
}

.navbar>div>.linkbutton:hover {

    background-color: rgb(32, 32, 32);
}

.navbar>div>.linkbutton:active {

    background-color: rgb(45, 43, 54);
}

.navbar>div>.linkbutton>img {
    height: 20px;
    transform: scale(1.6) translateY(1px);
    margin-left: 5px;
}

/* remove star on smol screen */
@media (max-width: 980px) {
    .star {
        display: none;
    }
}

.star {
    position: absolute;
    top: 1200px;
    left: 0;
    width: 100vw;
    overflow: hidden;
    z-index: 500;
    pointer-events: none;
}

.star>img {
    width: 120px;
    margin-left: calc((100vw - min(790px, 100vw)) / 2 - 85px);
}

.toadcan {
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    overflow: hidden;
    z-index: 500;
    pointer-events: none;
}

.toadcan>img {
    width: 120px;
    rotate: 5deg;
    margin-top: 26px;
    margin-left: calc(100vw - (100vw - min(790px, 100vw)) / 2);
}

.user-hackvertisement>.user-img>img {
    width: 100%;
}

.user-hackvertisement>form>button {
    float: right;
    color: red;
    display: none;
    border: none;
    cursor: pointer;
}

.user-hackvertisement>form>button:hover {
    background: none;
    text-decoration: underline;
}

.user-hackvertisement {
    background-color: #e5e5e5;
    width: 722px;
    max-width: calc(100% - 4px);
    height: 105px;
    padding: 5px;
    margin-bottom: 22px;
    overflow: hidden;
    outline: 1px solid black;
    box-shadow: 6px 6px black;
}

.user-hackvertisement>a {
    color: rgb(0, 77, 255);
}

a:hover {
    text-decoration: underline;
}

.centered {
    margin-left: auto;
    margin-right: auto;
    width: fit-content;
}

input[type=submit],
.linkbutton {
    padding: 15px;
    background-color: #4EE055;
    color: white;
    font-family: Arial, Helvetica, sans-serif;
    border-radius: 10px;
    font-size: 22px;
    box-shadow: 4px 4px black;
    border: solid 1px black;
}

input[type=submit]:hover,
.linkbutton:hover {
    background-color: #45c94c;
    text-decoration: none;
}

input[type=submit]:active,
.linkbutton:active {
    background-color: #2c8b31;
}

.container>div {
    margin: 40px;
    padding-bottom: 40px;
}

.container {
    background-color: #F2FFEF;
    outline: solid 2px black;
    width: 100%;
    max-width: 846px;
    padding: 0;
    margin-top: 60px;
    margin-left: 50%;
    transform: translateX(-50%);
}

h1 {
    font-size: 49px;
    font-weight: normal;
    margin-bottom: 20px;
    margin-top: 20px;
    text-align: center;
}

p,
li {
    font-size: 22px;
    line-height: 30px;
}

.subtitle {
    margin-top: 0;
    text-align: center;
}

a {
    text-decoration: none;
    color: #A100FF;
}

